# x64_PE-packer

./: CMakeLists.txt  README.md  packer.cpp  structs_for_pack_and_unpack.h
Decryptor_Stub/: decryptor.asm  decryptor_compile_settings.txt
Decryptor_Stub/Function_on_export_исходники/: CMakeLists.txt  Function_on_export.cpp
Decryptor_Stub/for_exit_исходники/: for_exit.asm
Unpacker_Stub/: Unpacker_Stubloader.asm  Unpacker_Stubloader_compile_settings.txt
Unpacker_Stub/Function_to_export_исходники/: CMakeLists.txt  Function_to_export.cpp
Unpacker_Stub/lzo1z_d1_исходники/: CmakeLists.txt  config1x.h  config1z.h  lzo1_d.ch  lzo1x_d.ch  lzo1z_d1.c  lzo_conf.h  lzo_ptr.h
